--- a/Project8.html
+++ b/Project8.html
@@ -46,14 +46,14 @@
 			lwlocation: "4", 
 			lwShowLoadingPercent: "true", 
 			lwTextColor: "255,0,0,0", 
-			iniFile: "config.js", 
+			iniFile: "config1.js",
 			progressType: "1" 
 		} 
 	</script> 
-	<link rel="stylesheet" href="../../../../../css/navStyle.css">
+	<link rel="stylesheet" href="./css/navStyle.css">
 </head> 
 <body> 
-	<script language="javascript" src="javascript/load.js"></script>
-	<script src="../../../../../scripts/includeNav.js" defer></script>
+	<script language="javascript" src="javascript/load1.js"></script>
+	<script src="./scripts/includeNav.js" defer></script>
 </body> 
 </html>
