--- a/Project9.html
+++ b/Project9.html
@@ -51,12 +51,12 @@
 			progressType: "1"
 		} 
 	</script>
-	<link rel="stylesheet" href="../../../../../css/navStyle.css">
+	<link rel="stylesheet" href="./css/navStyle.css">
 </head>
 
 <body>
 </body>
 <script language="javascript" src="javascript/load.js"></script>
-<script src="../../../../../scripts/includeNav.js" defer></script>
+<script src="./scripts/includeNav.js" defer></script>
 
 </html>
